.manifestor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    name: ${name}
  name: ${name}
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ${name}
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ${name}
    spec:
      containers:
        - image: registry.digitalocean.com/netice9/${name}:226b90e
          imagePullPolicy: IfNotPresent
          name: nin-home
          ports:
            - containerPort: 5001
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
            requests:
              cpu: 300m
              memory: 300Mi
      restartPolicy: Always
